--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,20 @@
   <body>
 	
     <div class="generico" >
+    <!-- ===========================================================-->
+     <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#">SEA</a>
+          <ul class="nav">
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Publications</a></li>
+          </ul>
+        </div>
+      </div>
+	
+    </div>
+    <!-- ===========================================================-->
 	<a href="https://github.com/neuromancer/SEA"><img id="band" src="./images/band.png"/></a>
 	<div class="titulo">
 		
