--- a/publications.html
+++ b/publications.html
@@ -15,6 +15,28 @@
   <body>
 	
     <div class="generico" >
+    <!-- ===========================================================-->
+     <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#">SEA</a>
+          <ul class="nav">
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Publications</a></li>
+          </ul>
+        </div>
+      </div>
+	
+    </div>
+    <!-- ===========================================================-->
+	<a href="https://github.com/neuromancer/SEA"><img id="band" src="./images/band.png"/></a>
+	<div class="titulo">
+		
+		<img id="cifasis" src="./images/cifasis_nuevo.png"/>
+	    <img id="verimag" src="./images/verimag.jpg"/>
+	    <h2>Symbolic Exploit Assistant</h2>
+    
+	</div>
 	
 	 <div class="hero-unit" id="state">
 		<p>
