--- a/publications.html
+++ b/publications.html
@@ -21,8 +21,8 @@
         <div class="container">
           <a class="brand" href="#">SEA</a>
           <ul class="nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Publications</a></li>
+            <li><a href="./index2.html">About</a></li>
+            <li><a href="./publications.html">Publications</a></li>
           </ul>
         </div>
       </div>
