--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 		
 		<img id="cifasis" src="./images/cifasis_nuevo.png"/>
 	    <img id="verimag" src="./images/verimag.jpg"/>
-	    <h2>Symbolic Exploit Assistant</h2>
+	    <h2>SYMBOLIC EXPLOIT ASSISTANT</h2>
     
 	</div>
 	
